tests/errors/ConstraintError/ce03.ledger

2016-12-14  missing values
	Expenses:E01
	Assets:A01

